bat.bool1.in1020.In1020.scala.error
Erreur de compilation :
In1020:1: error: type mismatch;
 found   : Unit
 required: Boolean
def in1020(a:Int, b:Int):Boolean = {
                                   ^